# exclude_sql_predicates

./: README.md  pyproject.toml
test/: test_validator.py
validator/: __init__.py  main.py
