[project]
name = "exclude_sql_predicates"
version = "0.0.0"
description = "Validates that the SQL query does not contain certain predicates."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8"
dependencies = [
    "sqlglot",
    "guardrails-ai>=0.3.2",
    "pydantic>=2.4.2",
    "pytest"
]